[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.7"

files = ["pluca", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
       "appdirs",
       "mysql",
       "mysql.connector",
       "postgresql",
       "postgresql.driver",
       "postgresql.driver.dbapi20",
       "setuptools",
       ]
ignore_missing_imports = true

[tool.pylint.master]
ignore-paths = ['.git', '.venv']
ignore-patterns = '^\.#'
recursive = true
load-plugins = [
	     'pylint.extensions.bad_builtin',
	     'pylint.extensions.check_elif',
	     'pylint.extensions.docparams',
	     'pylint.extensions.docstyle',
	     'pylint.extensions.mccabe',
	     'pylint.extensions.overlapping_exceptions',
]

[tool.pylint.basic]
jobs = 0

# Good variable names which should always be accepted, separated by a comma.
good-names = [
	   'i',
	   'ex',
	   'fd',
	   'gc',
	   'nr',
]

[tool.pylint.variables]
init-import = true

[tool.pylint.messages_control]
disable = [
        "missing-function-docstring",
        "missing-module-docstring",
        "missing-class-docstring",
]

[tool.pylint.deprecated_builtins]
bad-functions = ["print"]

[tool.taskipy.tasks]
test = "python -m doctest README.md && python -m unittest tests/test_*.py"
lint = "flake8 && mypy && pylint ."
pre-commit = "task lint"
pre-push = "task lint && task test"
