[project]
name = "pluca"
authors = [{name = "Flavio Veloso Soares", email = "flaviovs@magnux.com"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
  "codespell",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-docstrings",
  "flake8-tidy-imports",
  "flake8-walrus",
  "flake8",
  "flit",
  "mypy",
  "pylint",
  "taskipy",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.codespell]
skip = '*~,./.git,./.venv,./.mypy_cache,*requirements.txt,./pluca.egg-info'

[tool.mypy]
python_version = "3.7"

files = ["pluca", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
  "appdirs",
  "mysql",
  "mysql.connector",
  "postgresql",
  "postgresql.driver",
  "postgresql.driver.dbapi20",
]
ignore_missing_imports = true

[tool.pylint.master]
ignore-paths = [".git", ".venv"]
ignore-patterns = '^\.#'
recursive = true
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.check_elif",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.mccabe",
  "pylint.extensions.overlapping_exceptions",
]

[tool.pylint.basic]
jobs = 0

# Good variable names which should always be accepted, separated by a comma.
good-names = [
  "i",
  "db",
  "ex",
  "fd",
  "gc",
  "nr",
]

[tool.pylint.variables]
init-import = true

[tool.pylint.messages_control]
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.pylint.deprecated_builtins]
bad-functions = ["print"]

[tool.taskipy.tasks]
spellcheck = "codespell"
test = "python -m unittest"
lint = "flake8 && mypy && pylint ."
pre-commit = "task spellcheck && task lint"
pre-push = "task spellcheck && task lint && task test"
