[project]
name = "pluca"
authors = [{name = "Flavio Veloso Soares", email = "flaviovs@magnux.com"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
description = "Python caching library with file cache, SQLite cache, memory cache, and pluggable backends."
keywords = [
  "python caching",
  "python cache",
  "caching library",
  "file cache",
  "sqlite cache",
  "memory cache",
  "disk cache",
  "persistent cache",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Caching",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/flaviovs/pluca"
Repository = "https://github.com/flaviovs/pluca"
Issues = "https://github.com/flaviovs/pluca/issues"
Changelog = "https://github.com/flaviovs/pluca/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "codespell",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-docstrings",
  "flake8-tidy-imports",
  "flake8-walrus",
  "flake8",
  "flit",
  "mypy",
  "pylint",
  "taskipy",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.codespell]
skip = '*~,./.git,./.venv,./.mypy_cache,*requirements.txt,./pluca.egg-info'

[tool.mypy]
python_version = "3.11"

files = ["pluca", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
  "appdirs",
]
ignore_missing_imports = true

[tool.pylint.master]
ignore-paths = [".git", ".venv"]
ignore-patterns = '^\.#'
recursive = true
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.check_elif",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.mccabe",
  "pylint.extensions.overlapping_exceptions",
]

[tool.pylint.basic]
jobs = 0

# Good variable names which should always be accepted, separated by a comma.
good-names = [
  "i",
  "db",
  "ex",
  "fd",
  "gc",
  "nr",
]

[tool.pylint.variables]
init-import = true

[tool.pylint.messages_control]
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.pylint.deprecated_builtins]
bad-functions = ["print"]

[tool.taskipy.tasks]
spellcheck = "codespell"
test = "python -m unittest"
lint = "flake8 && mypy && pylint ."
pre-commit = "task spellcheck && task lint"
pre-push = "task spellcheck && task lint && task test"
