[metadata]
name = pluca
version = attr: pluca.__version__
description = Plugable cache architecture for Python
author = Flavio Veloso Soares
author_email = flaviovs@magnux.com
license = MIT
license_files = LICENSE.txt
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.7
packages = pluca
